@@ -94,7 +94,7 @@ final class InstallerScriptTest {
                 Map.entry("SYMPHONY_TRELLO_TEST_INHERITED", "inherited-test-sentinel"),
                 Map.entry("sYmPhOnY_FUTURE_CONTROL", "inherited-mixed-case-sentinel"));
         String inheritedNames = String.join(" ", inheritedControls.keySet());
-        ProcessBuilder processBuilder = new ProcessBuilder(
+        var processBuilder = new ProcessBuilder(
                 "bash",
                 "-c",
                 "for name in " + inheritedNames + "; do printf '%s\\n' \"${!name}\"; done; "
@@ -126,7 +126,7 @@ final class InstallerScriptTest {
                 "SYMPHONY_HOME", explicitSymphonyHome.toString(),
                 "SYMPHONY_TRELLO_CONFIG_DIR", explicitConfigDirectory.toString(),
                 "SYMPHONY_TRELLO_INSTALL_SOURCE", "release-archive");
-        ProcessBuilder processBuilder = new ProcessBuilder(
+        var processBuilder = new ProcessBuilder(
                 "bash",
                 "-c",
                 "printf '%s\\n%s\\n%s' \"$SYMPHONY_HOME\" \"$SYMPHONY_TRELLO_CONFIG_DIR\" "
@@ -152,7 +152,7 @@ final class InstallerScriptTest {
         assumeFalse(isWindows());
         assumeTrue(commandExists("bash"));
         Path inheritedHome = temporaryDirectory.resolve("inherited-home-sentinel");
-        ProcessBuilder processBuilder = new ProcessBuilder("bash", "install.sh", "--dry-run", "--no-onboard");
+        var processBuilder = new ProcessBuilder("bash", "install.sh", "--dry-run", "--no-onboard");
         processBuilder.environment().put("SYMPHONY_HOME", inheritedHome.toString());
         processBuilder.environment().put("SYMPHONY_TRELLO_INSTALL_SOURCE", "inherited-source-sentinel");
         processBuilder
@@ -188,7 +188,7 @@ final class InstallerScriptTest {
         // given
         assumeFalse(isWindows());
         assumeTrue(commandExists("bash"));
-        ProcessBuilder processBuilder = new ProcessBuilder(
+        var processBuilder = new ProcessBuilder(
                 "bash",
                 "-c",
                 "if [[ -n ${SYMPHONY_TRELLO_REPO_URL:-} || -n ${SYMPHONY_TRELLO_REF:-} ]]; then "
@@ -265,8 +265,8 @@ final class InstallerScriptTest {
 
         // then
         result.assertSuccess();
-        List<String> environment = Files.readAllLines(capturedEnvironment, StandardCharsets.UTF_8);
-        Path isolatedHome = Path.of(environment.get(0));
+        List<String> environment = Files.readAllLines(capturedEnvironment);
+        Path isolatedHome = Path.of(environment.getFirst());
         Path repositoryRoot = Path.of("").toAbsolutePath();
         assertThat(isolatedHome)
                 .isAbsolute()
@@ -310,11 +310,9 @@ final class InstallerScriptTest {
         Path firstHome = Path.of(first.output());
         Path secondHome = Path.of(second.output());
         assertThat(firstHome.getParent()).isEqualTo(temporaryDirectory);
-        assertThat(firstHome).isDirectory();
-        assertThat(firstHome.getFileName().toString()).isEqualTo("first-symphony-home-user-home");
+        assertThat(firstHome).isDirectory().hasFileName("first-symphony-home-user-home");
         assertThat(secondHome.getParent()).isEqualTo(temporaryDirectory);
-        assertThat(secondHome).isDirectory().isNotEqualTo(firstHome);
-        assertThat(secondHome.getFileName().toString()).isEqualTo("second-symphony-home-user-home");
+        assertThat(secondHome).isDirectory().isNotEqualTo(firstHome).hasFileName("second-symphony-home-user-home");
         assertThat(Path.of(repeatedFirst.output())).isEqualTo(firstHome);
     }
 
@@ -689,8 +687,7 @@ final class InstallerScriptTest {
                 app_dir=%s
                 config_dir=/tmp/ignored-config
                 """
-                        .formatted(partialApp),
-                StandardCharsets.UTF_8);
+                        .formatted(partialApp));
         Map<String, String> environment = new LinkedHashMap<>(microOsLayoutEnvironment(home, varPath, usersRoot));
         environment.put("SYMPHONY_TRELLO_TEST_OS_ID", "debian");
         environment.put("SYMPHONY_TRELLO_TEST_OS_PRETTY_NAME", "Debian GNU/Linux");
@@ -751,8 +748,7 @@ final class InstallerScriptTest {
                                 temporaryDirectory.resolve("unsafe-legacy-context-replayed-config"),
                                 temporaryDirectory.resolve("unsafe-legacy-context-replayed-workspaces"),
                                 temporaryDirectory.resolve("unsafe-legacy-context-replayed-state"),
-                                temporaryDirectory.resolve("unsafe-legacy-context-replayed-bin")),
-                StandardCharsets.UTF_8);
+                                temporaryDirectory.resolve("unsafe-legacy-context-replayed-bin")));
         Map<String, String> environment = new LinkedHashMap<>(microOsLayoutEnvironment(home, varPath, usersRoot));
         environment.put("SYMPHONY_TRELLO_TEST_OS_ID", "debian");
         environment.put("SYMPHONY_TRELLO_TEST_OS_PRETTY_NAME", "Debian GNU/Linux");
@@ -1215,10 +1211,10 @@ final class InstallerScriptTest {
         Files.createDirectories(binDirectory);
         Files.createDirectories(legacyService.getParent());
         Files.createDirectories(legacyAutostartEnv.getParent());
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
-        Files.writeString(command, "launcher\n", StandardCharsets.UTF_8);
-        Files.writeString(legacyService, "legacy service\n", StandardCharsets.UTF_8);
-        Files.writeString(legacyAutostartEnv, "TRELLO_API_KEY=\"legacy\"\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
+        Files.writeString(command, "launcher\n");
+        Files.writeString(legacyService, "legacy service\n");
+        Files.writeString(legacyAutostartEnv, "TRELLO_API_KEY=\"legacy\"\n");
         Files.writeString(
                 state.resolve("install-context.properties"),
                 """
@@ -1232,8 +1228,7 @@ final class InstallerScriptTest {
                 bin_dir=%s
                 codex_npm_prefix=%s
                 """
-                        .formatted(app, config, workspaces, state, cache, binDirectory, cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                        .formatted(app, config, workspaces, state, cache, binDirectory, cache.resolve("npm")));
         Map<String, String> environment = Map.of(
                 "HOME",
                 home.toString(),
@@ -1286,8 +1281,8 @@ final class InstallerScriptTest {
         Files.createDirectories(state);
         Files.createDirectories(cache);
         Files.createDirectories(binDirectory);
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
-        Files.writeString(recordedAutostartEnv, "TRELLO_API_KEY=\"recorded\"\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
+        Files.writeString(recordedAutostartEnv, "TRELLO_API_KEY=\"recorded\"\n");
         Files.writeString(
                 state.resolve("install-context.properties"),
                 """
@@ -1312,8 +1307,7 @@ final class InstallerScriptTest {
                                 cache,
                                 binDirectory,
                                 recordedAutostartEnv,
-                                cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                                cache.resolve("npm")));
         Map<String, String> environment =
                 Map.of("HOME", home.toString(), "SYMPHONY_TRELLO_CONFIG_DIR", newConfig.toString());
 
@@ -1351,7 +1345,7 @@ final class InstallerScriptTest {
         Files.createDirectories(state);
         Files.createDirectories(cache);
         Files.createDirectories(binDirectory);
-        Files.writeString(recordedAutostartEnv, "TRELLO_API_KEY=\"recorded\"\n", StandardCharsets.UTF_8);
+        Files.writeString(recordedAutostartEnv, "TRELLO_API_KEY=\"recorded\"\n");
         Files.writeString(
                 state.resolve(INSTALL_CONTEXT_PROPERTIES),
                 """
@@ -1376,8 +1370,7 @@ final class InstallerScriptTest {
                                 cache,
                                 binDirectory,
                                 recordedAutostartEnv,
-                                cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                                cache.resolve("npm")));
         Map<String, String> environment = Map.of(
                 "PATH",
                 fakeBin + File.pathSeparator + System.getenv("PATH"),
@@ -1475,8 +1468,7 @@ final class InstallerScriptTest {
                                 dataHome.resolve("workspaces"),
                                 dataHome.resolve("state"),
                                 home.resolve(".local/bin"),
-                                dataHome.resolve("npm")),
-                StandardCharsets.UTF_8);
+                                dataHome.resolve("npm")));
 
         // when
         ProcessResult install = run(Map.of("HOME", home.toString()), "bash", "install.sh", "--dry-run", "--no-onboard");
@@ -1512,7 +1504,7 @@ final class InstallerScriptTest {
         Files.createDirectories(config);
         Files.createDirectories(workspaces);
         Files.createDirectories(cache);
-        Files.writeString(outside.resolve("app/.symphony-trello-install"), "marker", StandardCharsets.UTF_8);
+        Files.writeString(outside.resolve("app/.symphony-trello-install"), "marker");
         Files.createSymbolicLink(symlink, outside);
         Files.writeString(
                 state.resolve("install-context.properties"),
@@ -1529,8 +1521,7 @@ final class InstallerScriptTest {
                 codex_npm_prefix=%s
                 created_microos_var_root=false
                 """
-                        .formatted(app, config, workspaces, state, cache, commandDirectory, cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                        .formatted(app, config, workspaces, state, cache, commandDirectory, cache.resolve("npm")));
 
         // when
         ProcessResult install = run(Map.of("HOME", home.toString()), "bash", "install.sh", "--dry-run", "--no-onboard");
@@ -1617,8 +1608,7 @@ final class InstallerScriptTest {
                                 dataHome.resolve("workspaces"),
                                 dataHome.resolve("state"),
                                 binDirectory,
-                                dataHome.resolve("npm")),
-                StandardCharsets.UTF_8);
+                                dataHome.resolve("npm")));
 
         // when
         ProcessResult result = run(
@@ -1663,7 +1653,7 @@ final class InstallerScriptTest {
         Files.createDirectories(state);
         Files.createDirectories(cache.resolve("npm"));
         Files.createDirectories(bin);
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         Files.writeString(
                 home.resolve(".config/symphony-trello/install-context.properties"),
                 """
@@ -1679,8 +1669,7 @@ final class InstallerScriptTest {
                 codex_npm_prefix=%s
                 created_microos_var_root=false
                 """
-                        .formatted(app, config, workspaces, state, cache, bin, cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                        .formatted(app, config, workspaces, state, cache, bin, cache.resolve("npm")));
         Map<String, String> environment = Map.of("HOME", home.toString(), "SYMPHONY_HOME", symphonyHome.toString());
 
         // when
@@ -1723,7 +1712,7 @@ final class InstallerScriptTest {
         Files.createDirectories(workspaces);
         Files.createDirectories(state);
         Files.createDirectories(cache.resolve("npm"));
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         Files.writeString(
                 state.resolve("install-context.properties"),
                 """
@@ -1746,8 +1735,7 @@ final class InstallerScriptTest {
                                 state,
                                 cache,
                                 home.resolve(".local/bin"),
-                                cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                                cache.resolve("npm")));
 
         // when
         ProcessResult result = run(
@@ -1792,11 +1780,10 @@ final class InstallerScriptTest {
         Files.createDirectories(state);
         Files.createDirectories(cache.resolve("npm"));
         Files.createDirectories(bin);
-        Files.writeString(
-                explicitApp.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
-        Files.writeString(config.resolve(".env"), "TRELLO_API_KEY=secret\n", StandardCharsets.UTF_8);
-        Files.writeString(workspaces.resolve("card.txt"), "work\n", StandardCharsets.UTF_8);
-        Files.writeString(state.resolve("worker.pid"), "123\n", StandardCharsets.UTF_8);
+        Files.writeString(explicitApp.resolve(".symphony-trello-install"), "installer-managed\n");
+        Files.writeString(config.resolve(".env"), "TRELLO_API_KEY=secret\n");
+        Files.writeString(workspaces.resolve("card.txt"), "work\n");
+        Files.writeString(state.resolve("worker.pid"), "123\n");
         Files.writeString(
                 state.resolve("install-context.properties"),
                 """
@@ -1819,8 +1806,7 @@ final class InstallerScriptTest {
                                 state,
                                 cache,
                                 home.resolve(".local/bin"),
-                                cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                                cache.resolve("npm")));
 
         // when
         ProcessResult result = run(
@@ -1903,7 +1889,7 @@ final class InstallerScriptTest {
         Files.createDirectories(home);
         Files.createDirectories(app);
         Files.createDirectories(bin);
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
         Map<String, String> environment = Map.of("HOME", home.toString(), "SYMPHONY_TRELLO_CONFIG_DIR", "/bin");
 
         // when
@@ -1952,8 +1938,8 @@ final class InstallerScriptTest {
         Files.createDirectories(home.resolve(".local/state/symphony-trello"));
         Files.createDirectories(outside.resolve("symphony-trello"));
         Files.createDirectories(app);
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
-        Files.writeString(outside.resolve("symphony-trello/.env"), "TRELLO_TOKEN=test\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
+        Files.writeString(outside.resolve("symphony-trello/.env"), "TRELLO_TOKEN=test\n");
         Files.createSymbolicLink(home.resolve(".config"), outside);
         Map<String, String> environment = Map.of("HOME", home.toString());
 
@@ -1990,8 +1976,8 @@ final class InstallerScriptTest {
         Files.createDirectories(home.resolve(".local/bin"));
         Files.createDirectories(app);
         Files.createDirectories(outsideNpmPrefix.resolve("bin"));
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
-        Files.writeString(outsideNpmPrefix.resolve("package.json"), "{\"private\":true}\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
+        Files.writeString(outsideNpmPrefix.resolve("package.json"), "{\"private\":true}\n");
         Files.createSymbolicLink(home.resolve(".cache"), outside);
         Files.createSymbolicLink(
                 home.resolve(".local/bin/codex"), home.resolve(".cache/symphony-trello/npm/bin/codex"));
@@ -2027,8 +2013,8 @@ final class InstallerScriptTest {
         Files.createDirectories(home.resolve(".config/symphony-trello"));
         Files.createDirectories(home.resolve(".local/state/symphony-trello"));
         Files.createDirectories(managedNpm);
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
-        Files.writeString(managedNpm.resolve("package.json"), "{\"private\":true}\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
+        Files.writeString(managedNpm.resolve("package.json"), "{\"private\":true}\n");
         Map<String, String> environment = Map.of("HOME", home.toString(), "XDG_CACHE_HOME", workspaceRoot.toString());
 
         // when
@@ -2050,8 +2036,8 @@ final class InstallerScriptTest {
         Files.createDirectories(home.resolve(".config/symphony-trello"));
         Files.createDirectories(home.resolve(".local/state/symphony-trello"));
         Files.createDirectories(managedNpm);
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
-        Files.writeString(managedNpm.resolve("package.json"), "{\"private\":true}\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
+        Files.writeString(managedNpm.resolve("package.json"), "{\"private\":true}\n");
         Map<String, String> environment = Map.of("HOME", home.toString(), "XDG_CACHE_HOME", app.toString());
 
         // when
@@ -2095,8 +2081,8 @@ final class InstallerScriptTest {
         Files.createDirectories(workspaceRoot);
         Files.createDirectories(stateHome);
         Files.createDirectories(binDirectory);
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
-        Files.writeString(outsideConfig.resolve(".env"), "TRELLO_TOKEN=test\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
+        Files.writeString(outsideConfig.resolve(".env"), "TRELLO_TOKEN=test\n");
         Files.createSymbolicLink(configSymlink, outsideConfig);
         Map<String, String> environment = Map.of(
                 "HOME",
@@ -2143,8 +2129,8 @@ final class InstallerScriptTest {
         Files.createDirectories(workspaces);
         Files.createDirectories(state);
         Files.createDirectories(binDirectory);
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
-        Files.writeString(outsideContext, "installer=install.sh\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
+        Files.writeString(outsideContext, "installer=install.sh\n");
         Files.createSymbolicLink(home.resolve(".config"), outside);
         Map<String, String> environment = Map.of(
                 "HOME",
@@ -2237,7 +2223,7 @@ final class InstallerScriptTest {
         Files.createDirectories(cache);
         Files.createDirectories(contextBin);
         Files.createDirectories(overrideBin);
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
         Files.writeString(
                 home.resolve(".config/symphony-trello/install-context.properties"),
                 """
@@ -2253,8 +2239,7 @@ final class InstallerScriptTest {
                 codex_npm_prefix=%s
                 created_microos_var_root=false
                 """
-                        .formatted(app, config, workspaces, state, cache, contextBin, cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                        .formatted(app, config, workspaces, state, cache, contextBin, cache.resolve("npm")));
 
         // when
         ProcessResult result = run(
@@ -2300,7 +2285,7 @@ final class InstallerScriptTest {
         Files.createDirectories(workspaces);
         Files.createDirectories(state);
         Files.createDirectories(cache.resolve("npm"));
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         Files.writeString(
                 state.resolve("install-context.properties"),
                 """
@@ -2323,8 +2308,7 @@ final class InstallerScriptTest {
                                 state,
                                 cache,
                                 home.resolve(".local/bin"),
-                                cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                                cache.resolve("npm")));
 
         // when
         ProcessResult result = run(
@@ -2383,8 +2367,7 @@ final class InstallerScriptTest {
                                 state,
                                 cache,
                                 home.resolve(".local/bin"),
-                                cache.resolve("npm")),
-                StandardCharsets.UTF_8);
+                                cache.resolve("npm")));
 
         // when
         ProcessResult result = run(
@@ -2417,7 +2400,7 @@ final class InstallerScriptTest {
         Path btrfsLog = temporaryDirectory.resolve("btrfs.log");
         Files.createDirectories(fakeBin);
         Files.createDirectories(app);
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         writeExecutable(
                 fakeBin.resolve("btrfs"),
                 """
@@ -2456,7 +2439,7 @@ final class InstallerScriptTest {
         Path btrfsLog = temporaryDirectory.resolve("btrfs-target-root.log");
         Files.createDirectories(fakeBin);
         Files.createDirectories(app.resolve("nested/deeper"));
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         writeExecutable(
                 fakeBin.resolve("findmnt"),
                 """
@@ -2522,7 +2505,7 @@ final class InstallerScriptTest {
         Path btrfsLog = temporaryDirectory.resolve("btrfs-ordinary.log");
         Files.createDirectories(fakeBin);
         Files.createDirectories(app.resolve("nested/deeper"));
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         writeExecutable(
                 fakeBin.resolve("btrfs"),
                 """
@@ -2560,7 +2543,8 @@ final class InstallerScriptTest {
 
         // then
         result.assertSuccess();
-        assertThat(Files.readString(btrfsLog, StandardCharsets.UTF_8))
+        assertThat(btrfsLog)
+                .content(StandardCharsets.UTF_8)
                 .containsSubsequence(
                         "delete " + app.resolve("nested/deeper"),
                         "delete " + app.resolve("nested"),
@@ -2579,7 +2563,7 @@ final class InstallerScriptTest {
         Path btrfsLog = temporaryDirectory.resolve("btrfs-list-fails.log");
         Files.createDirectories(fakeBin);
         Files.createDirectories(app);
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         writeExecutable(
                 fakeBin.resolve("btrfs"),
                 """
@@ -2615,7 +2599,8 @@ final class InstallerScriptTest {
 
         // then
         result.assertSuccess();
-        assertThat(Files.readString(btrfsLog, StandardCharsets.UTF_8))
+        assertThat(btrfsLog)
+                .content(StandardCharsets.UTF_8)
                 .contains("rm -rf --one-file-system " + app)
                 .doesNotContain("delete ");
         assertThat(app).doesNotExist();
@@ -2692,7 +2677,7 @@ final class InstallerScriptTest {
         Path btrfsLog = temporaryDirectory.resolve("btrfs-top-level.log");
         Files.createDirectories(fakeBin);
         Files.createDirectories(app.resolve("nested/deeper"));
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         writeExecutable(
                 fakeBin.resolve("btrfs"),
                 """
@@ -2744,7 +2729,7 @@ final class InstallerScriptTest {
         Path btrfsLog = temporaryDirectory.resolve("btrfs-path-token.log");
         Files.createDirectories(fakeBin);
         Files.createDirectories(app.resolve("nested/deeper"));
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         writeExecutable(
                 fakeBin.resolve("btrfs"),
                 """
@@ -2791,7 +2776,7 @@ final class InstallerScriptTest {
         Path rmLog = temporaryDirectory.resolve("bsd-rm.log");
         Files.createDirectories(fakeBin);
         Files.createDirectories(app);
-        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "installer-managed\n");
         writeExecutable(
                 fakeBin.resolve("rm"),
                 """
@@ -3129,7 +3114,7 @@ final class InstallerScriptTest {
         Path symlink = temporaryDirectory.resolve(scenario.symlinkName());
         Files.createDirectories(home);
         Files.createDirectories(symphonyHome.resolve(scenario.overlapDirectory()));
-        Files.writeString(file, "not a directory", StandardCharsets.UTF_8);
+        Files.writeString(file, "not a directory");
         Files.createSymbolicLink(symlink, symphonyHome.resolve(scenario.overlapDirectory()));
         Map<String, String> environment = Map.of("HOME", home.toString(), "SYMPHONY_HOME", symphonyHome.toString());
 
@@ -3208,7 +3193,7 @@ final class InstallerScriptTest {
         Files.createDirectories(home);
         Files.createDirectories(stateHome);
         Files.createDirectories(app.resolve("target").resolve("quarkus-app"));
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
         String markerArgument =
                 "-Dsymphony.trello.managed.app_home=" + app.toAbsolutePath().normalize();
         String jarArgument = app.toAbsolutePath()
@@ -3222,9 +3207,7 @@ final class InstallerScriptTest {
                 .start();
         try {
             Files.writeString(
-                    stateHome.resolve("WORKFLOW.would-stop.md.abcdef123456.pid"),
-                    Long.toString(worker.pid()),
-                    StandardCharsets.UTF_8);
+                    stateHome.resolve("WORKFLOW.would-stop.md.abcdef123456.pid"), Long.toString(worker.pid()));
             Map<String, String> environment = Map.of("HOME", home.toString(), "SYMPHONY_HOME", symphonyHome.toString());
 
             // when
@@ -3254,13 +3237,11 @@ final class InstallerScriptTest {
         Files.createDirectories(home);
         Files.createDirectories(stateHome);
         Files.createDirectories(app.resolve("target").resolve("quarkus-app"));
-        Files.writeString(app.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
+        Files.writeString(app.resolve(".symphony-trello-install"), "marker");
         Process unmanaged = new ProcessBuilder("bash", "-c", "while :; do sleep 1; done").start();
         try {
             Files.writeString(
-                    stateHome.resolve("WORKFLOW.stale-skip.md.abcdef123456.pid"),
-                    Long.toString(unmanaged.pid()),
-                    StandardCharsets.UTF_8);
+                    stateHome.resolve("WORKFLOW.stale-skip.md.abcdef123456.pid"), Long.toString(unmanaged.pid()));
             Map<String, String> environment = Map.of("HOME", home.toString(), "SYMPHONY_HOME", symphonyHome.toString());
 
             // when
@@ -3324,7 +3305,7 @@ final class InstallerScriptTest {
         Files.createDirectories(home);
         Files.createDirectories(targetApp);
         Files.createDirectories(bin);
-        Files.writeString(targetApp.resolve(".symphony-trello-install"), "marker", StandardCharsets.UTF_8);
+        Files.writeString(targetApp.resolve(".symphony-trello-install"), "marker");
         Files.createSymbolicLink(symlinkApp, targetApp);
 
         // when
@@ -3358,8 +3339,8 @@ final class InstallerScriptTest {
         Files.createDirectories(home);
         Files.createDirectories(config);
         Files.createDirectories(bin);
-        Files.writeString(realRoot.resolve("app/.symphony-trello-install"), "marker", StandardCharsets.UTF_8);
-        Files.writeString(config.resolve(".env"), "TRELLO_TOKEN=test\n", StandardCharsets.UTF_8);
+        Files.writeString(realRoot.resolve("app/.symphony-trello-install"), "marker");
+        Files.writeString(config.resolve(".env"), "TRELLO_TOKEN=test\n");
         Files.createSymbolicLink(symlinkRoot, realRoot);
 
         // when
@@ -3393,7 +3374,7 @@ final class InstallerScriptTest {
         Path symlink = temporaryDirectory.resolve(scenario.symlinkName());
         Path safeBin = temporaryDirectory.resolve(scenario.slug() + "-bin");
         Files.createDirectories(home);
-        Files.writeString(file, "not a directory", StandardCharsets.UTF_8);
+        Files.writeString(file, "not a directory");
         Files.createSymbolicLink(symlink, temporaryDirectory.resolve(scenario.slug() + "-target"));
         Map<String, String> environment = Map.of("HOME", home.toString(), "SYMPHONY_HOME", symphonyHome.toString());
 
@@ -4150,10 +4131,12 @@ final class InstallerScriptTest {
                         "Added " + binDirectory + " to PATH in " + profile,
                         "Added " + binDirectory + " to PATH in " + loginProfile);
         assertThat(secondInstall.output()).contains("PATH setup already exists in " + profile);
-        assertThat(Files.readString(profile, StandardCharsets.UTF_8))
+        assertThat(profile)
+                .content(StandardCharsets.UTF_8)
                 .contains("# >>> Symphony for Trello PATH >>>", expectedLine, "# <<< Symphony for Trello PATH <<<")
                 .containsOnlyOnce(expectedLine);
-        assertThat(Files.readString(loginProfile, StandardCharsets.UTF_8))
+        assertThat(loginProfile)
+                .content(StandardCharsets.UTF_8)
                 .contains("# >>> Symphony for Trello PATH >>>", expectedLine, "# <<< Symphony for Trello PATH <<<")
                 .containsOnlyOnce(expectedLine);
     }
@@ -4458,7 +4441,7 @@ final class InstallerScriptTest {
         // Runtime coverage for the missing-java branch is POSIX-only: the PowerShell wrapper only
         // exists after a full install.ps1 run, and pwsh is not available in every verification
         // environment. This pins the generated wrapper text so the guard cannot silently drop.
-        String installer = Files.readString(Path.of("install.ps1"), StandardCharsets.UTF_8);
+        String installer = Files.readString(Path.of("install.ps1"));
 
         // when
         int javaGuard = installer.indexOf("if (-not (Get-Command java -ErrorAction SilentlyContinue))");
@@ -4480,11 +4463,9 @@ final class InstallerScriptTest {
                         "Install a Java 25+ JDK or rerun the installer, then try again:");
     }
 
-    /**
-     * A runtime PATH for negative wrapper tests holding only the commands the installed POSIX
-     * wrapper needs before its java lookup. Hosts commonly have /usr/bin/java or /bin/java, so a
-     * host-directory PATH cannot prove the missing-java branch runs.
-     */
+    /// A runtime PATH for negative wrapper tests holding only the commands the installed POSIX
+    /// wrapper needs before its java lookup. Hosts commonly have /usr/bin/java or /bin/java, so a
+    /// host-directory PATH cannot prove the missing-java branch runs.
     private static Path createWrapperRuntimePathWithoutJava(Path temporaryDirectory) throws IOException {
         Path runtimeBin = temporaryDirectory.resolve("runtime-bin-without-java");
         Files.createDirectories(runtimeBin);
@@ -4567,8 +4548,8 @@ final class InstallerScriptTest {
                 after
                 """
                         .formatted(pathLine);
-        Files.writeString(home.resolve(".bashrc"), managedBlock, StandardCharsets.UTF_8);
-        Files.writeString(home.resolve(".profile"), managedBlock, StandardCharsets.UTF_8);
+        Files.writeString(home.resolve(".bashrc"), managedBlock);
+        Files.writeString(home.resolve(".profile"), managedBlock);
         Map<String, String> environment = Map.of(
                 "HOME", home.toString(),
                 "SHELL", "/bin/bash",
@@ -4604,7 +4585,7 @@ final class InstallerScriptTest {
                 alias kept='still here'
                 """
                         .formatted(binDirectory);
-        Files.writeString(home.resolve(".bashrc"), profile, StandardCharsets.UTF_8);
+        Files.writeString(home.resolve(".bashrc"), profile);
         Map<String, String> environment = Map.of(
                 "HOME", home.toString(),
                 "SHELL", "/bin/bash",
@@ -4644,7 +4625,7 @@ final class InstallerScriptTest {
                 after
                 """
                         .formatted(otherPathLine, currentPathLine);
-        Files.writeString(home.resolve(".bashrc"), profile, StandardCharsets.UTF_8);
+        Files.writeString(home.resolve(".bashrc"), profile);
 
         // when
         ProcessResult result = runPosixUninstall(home, symphonyHome, binDirectory);
@@ -4685,7 +4666,7 @@ final class InstallerScriptTest {
                 """
                         .formatted(pathLine);
         Path shellProfile = home.resolve(".bashrc");
-        Files.writeString(shellProfile, profile, StandardCharsets.UTF_8);
+        Files.writeString(shellProfile, profile);
         assertThat(shellProfile.toFile().setWritable(false, false))
                 .as("the profile is made non-writable for the cleanup-failure scenario")
                 .isTrue();
@@ -4731,7 +4712,7 @@ final class InstallerScriptTest {
                 """
                         .formatted(pathLine);
         Path shellProfile = home.resolve(".bashrc");
-        Files.writeString(shellProfile, profile, StandardCharsets.UTF_8);
+        Files.writeString(shellProfile, profile);
         assertThat(shellProfile.toFile().setReadable(false, false))
                 .as("the profile is made unreadable for the cleanup-failure scenario")
                 .isTrue();
@@ -4797,7 +4778,7 @@ final class InstallerScriptTest {
         Path symphonyHome = temporaryDirectory.resolve("path-unwritable-symphony-home");
         Path binDirectory = temporaryDirectory.resolve("path-unwritable-bin");
         Path fakeLog = temporaryDirectory.resolve("path-unwritable.log");
-        Files.writeString(homeFile, "not a directory\n", StandardCharsets.UTF_8);
+        Files.writeString(homeFile, "not a directory\n");
         Map<String, String> environment = Map.of(
                 "PATH", fakeBin + File.pathSeparator + System.getenv("PATH"),
                 "HOME", homeFile.toString(),
@@ -5108,7 +5089,8 @@ final class InstallerScriptTest {
         assertThat(result.output())
                 .contains("  apt-get update && apt-get install -y git", "  apt-get install -y openjdk-25-jdk")
                 .doesNotContain("  apt-get update && apt-get install -y openjdk-25-jdk");
-        assertThat(Files.readString(aptLog, StandardCharsets.UTF_8))
+        assertThat(aptLog)
+                .content(StandardCharsets.UTF_8)
                 .contains("update", "install -y git")
                 .doesNotContain("openjdk-25-jdk");
     }
@@ -5183,10 +5165,13 @@ final class InstallerScriptTest {
                         "Open a new terminal with Java 25+ on PATH",
                         "Open a new terminal with npm on PATH");
         assertThat(userRoot).doesNotExist();
-        assertThat(Files.readString(commandLog, StandardCharsets.UTF_8))
+        assertThat(commandLog)
+                .content(StandardCharsets.UTF_8)
                 .isEqualTo(
-                        "sudo transactional-update --non-interactive pkg install git java-25-openjdk-devel nodejs npm\n"
-                                + "transactional-update --non-interactive pkg install git java-25-openjdk-devel nodejs npm\n");
+                        """
+                        sudo transactional-update --non-interactive pkg install git java-25-openjdk-devel nodejs npm
+                        transactional-update --non-interactive pkg install git java-25-openjdk-devel nodejs npm
+                        """);
     }
 
     @Test
@@ -5687,7 +5672,7 @@ final class InstallerScriptTest {
         Path symlink = temporaryDirectory.resolve("ps-install-app-link");
         Path safeBin = temporaryDirectory.resolve("ps-install-app-bin");
         Files.createDirectories(home);
-        Files.writeString(file, "not a directory", StandardCharsets.UTF_8);
+        Files.writeString(file, "not a directory");
         Files.createSymbolicLink(symlink, temporaryDirectory.resolve("ps-install-app-target"));
         Map<String, String> environment = new LinkedHashMap<>(nonWindowsPowerShellEnvironment());
         environment.put("USERPROFILE", home.toString());
@@ -5809,7 +5794,7 @@ final class InstallerScriptTest {
         Path symlink = temporaryDirectory.resolve("ps-install-bin-workspaces-link");
         Files.createDirectories(home);
         Files.createDirectories(symphonyHome.resolve("workspaces"));
-        Files.writeString(file, "not a directory", StandardCharsets.UTF_8);
+        Files.writeString(file, "not a directory");
         Files.createSymbolicLink(symlink, symphonyHome.resolve("workspaces"));
         Map<String, String> environment = new LinkedHashMap<>(nonWindowsPowerShellEnvironment());
         environment.put("USERPROFILE", home.toString());
@@ -6221,7 +6206,7 @@ final class InstallerScriptTest {
                         .toArray(String[]::new));
 
         // then
-        assertThat(result.exitCode()).as(result.output()).isEqualTo(1);
+        assertThat(result.exitCode()).as(result.output()).isOne();
         assertThat(result.output()).contains("install.ps1 supports Windows PowerShell setup only");
     }
 
@@ -6461,7 +6446,7 @@ final class InstallerScriptTest {
         Path symlink = temporaryDirectory.resolve("ps-uninstall-app-link");
         Path safeBin = temporaryDirectory.resolve("ps-uninstall-app-bin");
         Files.createDirectories(home);
-        Files.writeString(file, "not a directory", StandardCharsets.UTF_8);
+        Files.writeString(file, "not a directory");
         Files.createSymbolicLink(symlink, temporaryDirectory.resolve("ps-uninstall-app-target"));
         Map<String, String> environment = new LinkedHashMap<>(nonWindowsPowerShellEnvironment());
         environment.put("USERPROFILE", home.toString());
@@ -6522,7 +6507,7 @@ final class InstallerScriptTest {
         Path symlink = temporaryDirectory.resolve("ps-uninstall-bin-state-link");
         Files.createDirectories(home);
         Files.createDirectories(symphonyHome.resolve("state"));
-        Files.writeString(file, "not a directory", StandardCharsets.UTF_8);
+        Files.writeString(file, "not a directory");
         Files.createSymbolicLink(symlink, symphonyHome.resolve("state"));
         Map<String, String> environment = new LinkedHashMap<>(nonWindowsPowerShellEnvironment());
         environment.put("USERPROFILE", home.toString());
@@ -6675,7 +6660,7 @@ final class InstallerScriptTest {
         Files.createDirectories(stateHome);
         Files.createFile(prefix.resolve(".symphony-trello-install"));
         Path pidFile = stateHome.resolve("broken.pid");
-        Files.writeString(pidFile, "not-a-pid\n", StandardCharsets.UTF_8);
+        Files.writeString(pidFile, "not-a-pid\n");
 
         // when
         ProcessResult result = run(
@@ -6711,7 +6696,7 @@ final class InstallerScriptTest {
         assumeTrue(commandExists("bash"));
         Path symphonyHome = temporaryDirectory.resolve("protected-user-data-home");
         Files.createDirectories(symphonyHome.resolve("config"));
-        Files.writeString(symphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n", StandardCharsets.UTF_8);
+        Files.writeString(symphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n");
         Map<String, String> environment = Map.of("SYMPHONY_HOME", symphonyHome.toString());
 
         // when
@@ -6766,7 +6751,7 @@ final class InstallerScriptTest {
         Files.createDirectories(symphonyHome.resolve("workspaces"));
         Files.createDirectories(symphonyHome.resolve("state"));
         Files.createFile(symphonyHome.resolve(".symphony-trello-install"));
-        Files.writeString(symphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n", StandardCharsets.UTF_8);
+        Files.writeString(symphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n");
         Map<String, String> environment = Map.of("SYMPHONY_HOME", symphonyHome.toString());
 
         // when
@@ -6798,7 +6783,7 @@ final class InstallerScriptTest {
         Path symphonyHome = temporaryDirectory.resolve("embedded-empty-home");
         Files.createDirectories(symphonyHome);
         Files.createFile(symphonyHome.resolve(".symphony-trello-install"));
-        Files.writeString(symphonyHome.resolve("app.txt"), "managed app file\n", StandardCharsets.UTF_8);
+        Files.writeString(symphonyHome.resolve("app.txt"), "managed app file\n");
         Map<String, String> environment = Map.of("SYMPHONY_HOME", symphonyHome.toString());
 
         // when
@@ -6831,7 +6816,7 @@ final class InstallerScriptTest {
         Path configDirectory = symphonyHome.resolve("config");
         Files.createDirectories(appHome);
         Files.createDirectories(configDirectory);
-        Files.writeString(configDirectory.resolve(".env"), "TRELLO_API_KEY=secret\n", StandardCharsets.UTF_8);
+        Files.writeString(configDirectory.resolve(".env"), "TRELLO_API_KEY=secret\n");
         Map<String, String> environment = Map.of("SYMPHONY_HOME", symphonyHome.toString());
 
         // when
@@ -6884,8 +6869,8 @@ final class InstallerScriptTest {
                 created_microos_var_root=false
                 """
                         .formatted(appHome, configDirectory, workspaceRoot, stateHome, binDirectory);
-        Files.writeString(defaultStateContext, context, StandardCharsets.UTF_8);
-        Files.writeString(defaultConfigContext, context, StandardCharsets.UTF_8);
+        Files.writeString(defaultStateContext, context);
+        Files.writeString(defaultConfigContext, context);
         Map<String, String> environment = Map.of("HOME", home.toString(), "SYMPHONY_HOME", symphonyHome.toString());
 
         // when
@@ -6918,7 +6903,7 @@ final class InstallerScriptTest {
         Files.createDirectories(symphonyHome.resolve("workspaces"));
         Files.createDirectories(symphonyHome.resolve("state"));
         Files.createFile(symphonyHome.resolve(".symphony-trello-install"));
-        Files.writeString(symphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n", StandardCharsets.UTF_8);
+        Files.writeString(symphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n");
         Map<String, String> environment = Map.of("SYMPHONY_HOME", symphonyHome.toString());
 
         // when
@@ -6953,7 +6938,7 @@ final class InstallerScriptTest {
         Files.createDirectories(symphonyHome.resolve("workspaces"));
         Files.createDirectories(symphonyHome.resolve("state"));
         Files.createFile(symphonyHome.resolve(".symphony-trello-install"));
-        Files.writeString(symphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n", StandardCharsets.UTF_8);
+        Files.writeString(symphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n");
         Map<String, String> environment = Map.of("SYMPHONY_HOME", symphonyHome.toString());
 
         // when
@@ -7003,10 +6988,10 @@ final class InstallerScriptTest {
     @Test
     void installersDeclareExpectedManagedRuntimeCapabilities() throws Exception {
         // given
-        String posixInstaller = Files.readString(Path.of("install.sh"), StandardCharsets.UTF_8);
-        String powershellInstaller = Files.readString(Path.of("install.ps1"), StandardCharsets.UTF_8);
-        String posixUninstaller = Files.readString(Path.of("uninstall.sh"), StandardCharsets.UTF_8);
-        String powershellUninstaller = Files.readString(Path.of("uninstall.ps1"), StandardCharsets.UTF_8);
+        String posixInstaller = Files.readString(Path.of("install.sh"));
+        String powershellInstaller = Files.readString(Path.of("install.ps1"));
+        String posixUninstaller = Files.readString(Path.of("uninstall.sh"));
+        String powershellUninstaller = Files.readString(Path.of("uninstall.ps1"));
 
         // when
         var commandNames = List.of("setup-local", "start", "stop", "status", "logs");
@@ -7219,8 +7204,8 @@ final class InstallerScriptTest {
     @Test
     void installersOrderFinalHandoffAfterManagedWorkerSetupInSource() throws Exception {
         // given
-        String posixInstaller = Files.readString(Path.of("install.sh"), StandardCharsets.UTF_8);
-        String powershellInstaller = Files.readString(Path.of("install.ps1"), StandardCharsets.UTF_8);
+        String posixInstaller = Files.readString(Path.of("install.sh"));
+        String powershellInstaller = Files.readString(Path.of("install.ps1"));
         String posixOnboarding =
                 posixInstaller.substring(posixInstaller.lastIndexOf("if [[ \"$NO_ONBOARD\" == false ]]"));
         String powershellOnboarding =
@@ -7279,8 +7264,8 @@ final class InstallerScriptTest {
     @Test
     void installersOfferPathSetupBeforeGuidedSetupCanAbort() throws Exception {
         // given
-        String posixInstaller = Files.readString(Path.of("install.sh"), StandardCharsets.UTF_8);
-        String powershellInstaller = Files.readString(Path.of("install.ps1"), StandardCharsets.UTF_8);
+        String posixInstaller = Files.readString(Path.of("install.sh"));
+        String powershellInstaller = Files.readString(Path.of("install.ps1"));
 
         // when
         int posixPathSetup = posixInstaller.indexOf("\noffer_path_setup\n\nif [[ \"$NO_ONBOARD\" == false ]]");
@@ -7436,9 +7421,8 @@ final class InstallerScriptTest {
                 "bash " + shellQuote(installScript.toString()) + " --no-update-path --bin-dir "
                         + shellQuote(binDirectory.toString()));
         install.assertSuccess();
-        String serviceContent = Files.readString(servicePath, StandardCharsets.UTF_8);
-        String installContext = Files.readString(
-                xdgStateHome.resolve("symphony-trello/install-context.properties"), StandardCharsets.UTF_8);
+        String serviceContent = Files.readString(servicePath);
+        String installContext = Files.readString(xdgStateHome.resolve("symphony-trello/install-context.properties"));
         Map<String, String> uninstallEnvironment = Map.of(
                 "PATH",
                 fakeBin + File.pathSeparator + System.getenv("PATH"),
@@ -7467,7 +7451,8 @@ final class InstallerScriptTest {
                         "systemd_user_dir=" + xdgConfigHome.resolve("systemd/user"),
                         "systemd_service_path=" + servicePath,
                         "autostart_env_path=" + autostartEnvPath);
-        assertThat(Files.readString(fakeLog, StandardCharsets.UTF_8))
+        assertThat(fakeLog)
+                .content(StandardCharsets.UTF_8)
                 .contains(
                         "systemctl --user enable symphony-trello.service",
                         "systemctl --user restart symphony-trello.service",
@@ -7670,7 +7655,8 @@ final class InstallerScriptTest {
                             "Restarting managed workers after update...",
                             "Stopped WORKFLOW.docs-queue.md",
                             "Starting setup...");
-            assertThat(Files.readString(fakeLog, StandardCharsets.UTF_8))
+            assertThat(fakeLog)
+                    .content(StandardCharsets.UTF_8)
                     .contains("mvnw -q -f " + symphonyHome.resolve("app/pom.xml") + " -DskipTests clean package")
                     .containsSubsequence(
                             "TrelloBoardSetupMain stop",
@@ -7727,7 +7713,8 @@ final class InstallerScriptTest {
             assertThat(update.output())
                     .contains(
                             "Stopping managed workers before update...", "Restarting managed workers after update...");
-            assertThat(Files.readString(fakeLog, StandardCharsets.UTF_8))
+            assertThat(fakeLog)
+                    .content(StandardCharsets.UTF_8)
                     .containsSubsequence("TrelloBoardSetupMain stop", "TrelloBoardSetupMain start", "--all");
         } finally {
             if (Files.exists(binDirectory.resolve("symphony-trello"))) {
@@ -7761,14 +7748,14 @@ final class InstallerScriptTest {
         Path stalePid = symphonyHome.resolve("state/WORKFLOW.stale.pid");
         Path zeroPid = symphonyHome.resolve("state/WORKFLOW.zero.pid");
         Path reusedPid = symphonyHome.resolve("state/WORKFLOW.reused.pid");
-        Files.writeString(stalePid, "999999\n", StandardCharsets.UTF_8);
-        Files.writeString(zeroPid, "0\n", StandardCharsets.UTF_8);
+        Files.writeString(stalePid, "999999\n");
+        Files.writeString(zeroPid, "0\n");
         Files.delete(command);
         addSourceRepositoryCommit(sourceRepository, "UPDATED", "updated\n");
         Process unrelated = new ProcessBuilder("sleep", "60").start();
 
         try {
-            Files.writeString(reusedPid, unrelated.pid() + "\n", StandardCharsets.UTF_8);
+            Files.writeString(reusedPid, unrelated.pid() + "\n");
 
             // when
             ProcessResult update = run(
@@ -7790,7 +7777,7 @@ final class InstallerScriptTest {
             assertThat(stalePid).doesNotExist();
             assertThat(zeroPid).doesNotExist();
             assertThat(reusedPid).doesNotExist();
-            assertThat(Files.readString(fakeLog, StandardCharsets.UTF_8)).doesNotContain("TrelloBoardSetupMain stop");
+            assertThat(fakeLog).content(StandardCharsets.UTF_8).doesNotContain("TrelloBoardSetupMain stop");
         } finally {
             unrelated.destroyForcibly();
         }
@@ -8004,9 +7991,8 @@ final class InstallerScriptTest {
         Path binDirectory = temporaryDirectory.resolve("archive-to-source-bin");
         Path fakeLog = temporaryDirectory.resolve("archive-to-source.log");
         Files.createDirectories(appHome);
-        Files.writeString(
-                appHome.resolve(".symphony-trello-install"), "installer-managed archive\n", StandardCharsets.UTF_8);
-        Files.writeString(appHome.resolve("old-archive-file.txt"), "old archive content\n", StandardCharsets.UTF_8);
+        Files.writeString(appHome.resolve(".symphony-trello-install"), "installer-managed archive\n");
+        Files.writeString(appHome.resolve("old-archive-file.txt"), "old archive content\n");
         Map<String, String> environment = Map.of(
                 "PATH", fakeBin + File.pathSeparator + System.getenv("PATH"),
                 "SYMPHONY_HOME", symphonyHome.toString(),
@@ -8068,7 +8054,7 @@ final class InstallerScriptTest {
                         .toArray(String[]::new));
 
         // then
-        assertThat(result.exitCode()).as(result.output()).isEqualTo(1);
+        assertThat(result.exitCode()).as(result.output()).isOne();
         assertThat(normalizedWhitespace(result.output()))
                 .contains(
                         "Refusing to update existing Git checkout without Symphony installer",
@@ -8092,9 +8078,8 @@ final class InstallerScriptTest {
         Path binDirectory = temporaryDirectory.resolve("ps-archive-to-source-bin");
         Path fakeLog = temporaryDirectory.resolve("ps-archive-to-source.log");
         Files.createDirectories(appHome);
-        Files.writeString(
-                appHome.resolve(".symphony-trello-install"), "installer-managed archive\n", StandardCharsets.UTF_8);
-        Files.writeString(appHome.resolve("old-archive-file.txt"), "old archive content\n", StandardCharsets.UTF_8);
+        Files.writeString(appHome.resolve(".symphony-trello-install"), "installer-managed archive\n");
+        Files.writeString(appHome.resolve("old-archive-file.txt"), "old archive content\n");
 
         // when
         ProcessResult result = runPowerShellSourceCheckoutInstall(
@@ -8270,8 +8255,8 @@ final class InstallerScriptTest {
         Path callerDirectory = temporaryDirectory.resolve("caller");
         Path fakeLog = temporaryDirectory.resolve("relative-fake-tools.log");
         Files.createDirectories(callerDirectory);
-        Files.writeString(callerDirectory.resolve(".env.relative"), "TRELLO_API_KEY=key\n", StandardCharsets.UTF_8);
-        Files.writeString(callerDirectory.resolve("WORKFLOW.relative.md"), "# Relative\n", StandardCharsets.UTF_8);
+        Files.writeString(callerDirectory.resolve(".env.relative"), "TRELLO_API_KEY=key\n");
+        Files.writeString(callerDirectory.resolve("WORKFLOW.relative.md"), "# Relative\n");
         Map<String, String> environment = Map.of(
                 "PATH", fakeBin + System.getProperty("path.separator") + System.getenv("PATH"),
                 "SYMPHONY_TRELLO_REPO_URL", sourceRepository.toUri().toString(),
@@ -8289,8 +8274,7 @@ final class InstallerScriptTest {
                 """
                         .formatted(
                                 callerDirectory.resolve("WORKFLOW.relative.md"),
-                                callerDirectory.resolve(".env.relative")),
-                StandardCharsets.UTF_8);
+                                callerDirectory.resolve(".env.relative")));
         ProcessResult start = run(
                 environment,
                 callerDirectory,
@@ -8316,8 +8300,7 @@ final class InstallerScriptTest {
                 callerDirectory.resolve("WORKFLOW.relative.md").toString(),
                 "--follow");
         Path pidFile = singleFile(symphonyHome.resolve("state"), ".pid");
-        long managedPid =
-                Long.parseLong(Files.readString(pidFile, StandardCharsets.UTF_8).trim());
+        long managedPid = Long.parseLong(Files.readString(pidFile).trim());
         ProcessResult stop = run(
                 environment,
                 callerDirectory,
@@ -8349,7 +8332,7 @@ final class InstallerScriptTest {
     private Path createUnmarkedCheckout(String name) throws Exception {
         Path checkout = temporaryDirectory.resolve(name);
         Files.createDirectories(checkout);
-        Files.writeString(checkout.resolve("README.md"), "unrelated\n", StandardCharsets.UTF_8);
+        Files.writeString(checkout.resolve("README.md"), "unrelated\n");
         run(Map.of(), "git", "-C", checkout.toString(), "init", "-b", "main").assertSuccess();
         run(Map.of(), "git", "-C", checkout.toString(), "config", "user.name", "Test User")
                 .assertSuccess();
@@ -8372,7 +8355,7 @@ final class InstallerScriptTest {
     }
 
     private static ProcessResult runWithoutHome(String... command) throws Exception {
-        ProcessBuilder processBuilder = new ProcessBuilder(command);
+        var processBuilder = new ProcessBuilder(command);
         processBuilder.environment().remove("HOME");
         return run(processBuilder, "", 60);
     }
@@ -8404,11 +8387,11 @@ final class InstallerScriptTest {
     }
 
     private static String assertBtrfsSubvolumeDeletes(Path btrfsLog, Path app) throws IOException {
-        String log = Files.readString(btrfsLog, StandardCharsets.UTF_8);
-        assertThat(log)
+        String log = Files.readString(btrfsLog);
+        return assertThat(log)
                 .containsSubsequence(
-                        "delete " + app.resolve("nested/deeper"), "delete " + app.resolve("nested"), "delete " + app);
-        return log;
+                        "delete " + app.resolve("nested/deeper"), "delete " + app.resolve("nested"), "delete " + app)
+                .actual();
     }
 
     private static String normalizedWhitespace(String text) {
@@ -8425,11 +8408,10 @@ final class InstallerScriptTest {
         Files.createDirectories(app);
         Files.createDirectories(bin);
         Files.createFile(app.resolve(".symphony-trello-install"));
-        Files.writeString(
-                defaultSymphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n", StandardCharsets.UTF_8);
-        Files.writeString(defaultSymphonyHome.resolve("workspaces/card.txt"), "work\n", StandardCharsets.UTF_8);
-        Files.writeString(defaultSymphonyHome.resolve("state/worker.pid"), "123\n", StandardCharsets.UTF_8);
-        Files.writeString(bin.resolve(commandName), "launcher\n", StandardCharsets.UTF_8);
+        Files.writeString(defaultSymphonyHome.resolve("config/.env"), "TRELLO_API_KEY=secret\n");
+        Files.writeString(defaultSymphonyHome.resolve("workspaces/card.txt"), "work\n");
+        Files.writeString(defaultSymphonyHome.resolve("state/worker.pid"), "123\n");
+        Files.writeString(bin.resolve(commandName), "launcher\n");
         return new CustomPrefixUninstallFixture(defaultSymphonyHome, app, bin);
     }
 
